# shielded-android-ndk-api-canopy

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/work/samosudov/shielded_android_ndk_api/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/work/samosudov/shielded_android_ndk_api/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust-lib/: README.md  build.gradle  release-aar.gradle
rust-lib/src/androidTest/java/work/samosudov/rustlib/: ExampleInstrumentedTest.kt  RustAPITest.kt  ZecLibRustApiTest.kt
rust-lib/src/main/cpp/: main.cpp
rust-lib/src/main/include/: zapling_lib.h
rust-lib/src/main/java/work/samosudov/rustlib/: RustAPI.java  ZecLibRustApi.java
rust-lib/src/main/zapling-lib/: Cargo.toml
rust-lib/src/main/zapling-lib/pairing/: Cargo.toml
rust-lib/src/main/zapling-lib/pairing/src/bls12_381/: mod.rs  scalar.rs
rust-lib/src/main/zapling-lib/src/: lib.rs
rust-lib/src/test/java/work/samosudov/rustlib/: ExampleUnitTest.kt
zec-rust-lib/: README.md  build.gradle
zec-rust-lib/src/androidTest/java/work/samosudov/zecrustlib/: MerklePathTest.kt  ZecLibRustApiTest.kt
zec-rust-lib/src/main/: AndroidManifest.xml  CMakeLists.txt
zec-rust-lib/src/main/assets/: test-file.params
zec-rust-lib/src/main/cpp/: main.cpp  serialize.h  streams.h  util.cpp
zec-rust-lib/src/main/include/: zec_rust_lib.h
zec-rust-lib/src/main/java/work/samosudov/zecrustlib/: ZecLibRustApi.java
zec-rust-lib/src/main/java/work/samosudov/zecrustlib/crypto/: AddressFormatException.java  Base58.java  Bech32.java  BitcoinCashBitArrayConverter.java  Sha256Hash.java  Utils.java
zec-rust-lib/src/main/zec-rust-lib/: CMakeLists.txt  Cargo.toml
zec-rust-lib/src/main/zec-rust-lib/src/: lib.rs
zec-rust-lib/src/main/zec-rust-lib/zcash_proofs/src/sapling/: prover.rs
