[package]
name = "zapling-lib"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
jni = { version = "0.10", default-features = false }
libc = "0.2"
rand = "0.4"

[workspace]
members = [
    "components/equihash",
    "zcash_client_backend",
    "zcash_client_sqlite",
    "zcash_extensions",
    "zcash_history",
    "zcash_primitives",
    "zcash_proofs",
]