[package]
name = "zapling-lib"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
zcash_primitives = { path = "zcash_primitives" }

jni = { version = "0.10", default-features = false }
libc = "0.2"
rand = "0.4"
blake2b_simd = "0.5"
byteorder = "1"
crypto_api_chachapoly = "0.4"
ff = "0.8"
group = "0.8"
rand_core = "0.5.1"
jubjub = "0.5.1"