[package]
name = "zec-rust-lib"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
zcash_primitives = { path = "zcash_primitives" }
zcash_proofs = { path = "zcash_proofs" }

blake2b_simd = "0.5"
bls12_381 = "0.3.1"
byteorder = "1"
crypto_api_chachapoly = "0.4"
ff = "0.8"
group = "0.8"
jni = { version = "0.10", default-features = false }
jubjub = "0.5.1"
libc = "0.2"
rand = "0.7"
rand_core = "0.5.1"
