[package]
name = "pairing"

# Remember to change version string in README.md.
version = "0.14.2"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"

[dependencies]
rand = "0.4"
byteorder = "1"
bitvec = "0.18"
ff = { path = "../ff", features = ["derive"] }
group = { path = "../group" }

[dependencies.pairing]
version = "0.18"
optional = true

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.subtle]
version = "2.2.1"
default-features = false

[features]
unstable-features = ["expose-arith"]
expose-arith = []
default = []
